tests/fixtures/errors/generic_wrong_type_arg.z
# E0400: a misnamed type argument (wrong type-param label).
main: function is {
    x: (List item: i64)
}
